POWR-284 modify branding block

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -12,10 +12,10 @@ bootstrap_barrio_navbar_toggle: navbar-toggleable-lg
 bootstrap_barrio_navbar_container: 0
 bootstrap_barrio_navbar_top_position: ''
 bootstrap_barrio_navbar_top_color: navbar-dark
-bootstrap_barrio_navbar_top_background: bg-primary
+bootstrap_barrio_navbar_top_background: ''
 bootstrap_barrio_navbar_position: ''
 bootstrap_barrio_navbar_color: navbar-dark
-bootstrap_barrio_navbar_background: bg-primary
+bootstrap_barrio_navbar_background: ''
 bootstrap_barrio_table_hover: 1
 _core:
   default_config_hash: 78qpB4gShKy__Mqle_dzCnNVnSf-dprQszBls-TYr5Q
@@ -37,7 +37,7 @@ bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: ''
+bootstrap_barrio_icons: fontawesome
 bootstrap_barrio_system_messages: ''
 bootstrap_barrio_region_clean_top_header: 0
 bootstrap_barrio_region_class_top_header: row
