POWR-284 don't need the title to pass the test

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -37,7 +37,7 @@ bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: fontawesome
+bootstrap_barrio_icons: ''
 bootstrap_barrio_system_messages: ''
 bootstrap_barrio_region_clean_top_header: 0
 bootstrap_barrio_region_class_top_header: row
