POWR-279 Add RouteSubscriber Tests PANTHEON_ENVIRONMENT variable to change some routes.

--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -1,5 +1,6 @@
 services:
   portland.route_subscriber:
     class: Drupal\portland\Routing\RouteSubscriber
+    arguments: ['@logger.factory']
     tags:
       - { name: event_subscriber }
