POWR-289 Initial commit of changes to homepage layout and views

--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
@@ -1,33 +1,26 @@
-uuid: c6d78a51-07d5-49ee-b557-ddafbaf085d5
+uuid: d80b8845-ab45-4f2f-9b9b-d285c4d5ee21
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.taxonomy_term.topics.field_fontawesome_icon
-    - taxonomy.vocabulary.topics
+    - field.field.taxonomy_term.audience.field_fontawesome_icon
+    - taxonomy.vocabulary.audience
   module:
-    - panelizer
     - text
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
-id: taxonomy_term.topics.default
+id: taxonomy_term.audience.default
 targetEntityType: taxonomy_term
-bundle: topics
+bundle: audience
 mode: default
 content:
   description:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
   field_fontawesome_icon:
-    weight: 2
+    weight: 1
     label: above
     settings:
       link_to_entity: false
