--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.taxonomy_term.full
     - taxonomy.vocabulary.topics
   module:
+    - panelizer
     - text
 third_party_settings:
   panelizer:
@@ -21,7 +22,7 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
