--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -42,6 +42,7 @@ module:
   entity_reference_revisions: 0
   facets: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   filter: 0
@@ -127,8 +128,10 @@ module:
   views_ui: 0
   viewsreference: 0
   workflows: 0
+  ds: 1
   menu_link_content: 1
   pathauto: 1
+  ds_extras: 2
   views: 10
   paragraphs: 11
   lightning: 1000
