--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -22,8 +22,8 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: content
-      weight: 1
+      region: right
+      weight: -9
       uuid: a9d59952-4724-44eb-be56-8b0f734491d0
       context_mapping: {  }
     3f4fbacb-424f-48cb-98af-75ab6261924b:
@@ -33,7 +33,7 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: content
+      region: left
       weight: -1
       uuid: 3f4fbacb-424f-48cb-98af-75ab6261924b
       context_mapping: {  }
@@ -44,7 +44,7 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: content
+      region: left
       weight: 0
       uuid: 44c44eb6-b9ae-492c-9e8b-b5b91970f6b8
       context_mapping: {  }
@@ -52,7 +52,7 @@ variant_settings:
   uuid: 1cbab72a-c89f-41e2-a24f-6b48487cc61d
   label: null
   weight: 0
-  layout: layout_onecol
+  layout: cloudy_homepage
   layout_settings: {  }
   page_title: ''
   storage_type: page_manager
