--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.topics
   module:
     - taxonomy
@@ -61,9 +62,9 @@ display:
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'card border-0'
+          col_class_custom: col-sm
           row_class_default: false
-          row_class_custom: card-group
+          row_class_custom: row
       row:
         type: fields
         options:
@@ -125,10 +126,10 @@ display:
           absolute: false
           entity_type: taxonomy_term
           plugin_id: entity_link
-        description__value:
-          id: description__value
-          table: taxonomy_term_field_data
-          field: description__value
+        field_fontawesome_icon:
+          id: field_fontawesome_icon
+          table: taxonomy_term__field_fontawesome_icon
+          field: field_fontawesome_icon
           relationship: none
           group_type: group
           admin_label: ''
@@ -136,7 +137,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<p class="card-text">{{ description__value }}</p>'
+            text: ' class="fas fa-{{ field_fontawesome_icon }}"'
             make_link: false
             path: ''
             absolute: false
@@ -168,14 +169,15 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: text_default
-          settings: {  }
+          type: string
+          settings:
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -186,8 +188,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: taxonomy_term
-          entity_field: description
           plugin_id: field
         name:
           id: name
@@ -200,7 +200,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"card-body\">\n<h3 class=\"card-title\"><a href=\"{{ view_taxonomy_term }}\">{{ name }}</a></h3>\n{{ description__value }}\n</div>"
+            text: '<h3 class="topic"><a href="{{ view_taxonomy_term }}"{{ field_fontawesome_icon }}>{{ name }}</a></h3>'
             make_link: false
             path: ''
             absolute: false
@@ -255,6 +255,70 @@ display:
           entity_type: taxonomy_term
           entity_field: name
           plugin_id: term_name
+        description__value:
+          id: description__value
+          table: taxonomy_term_field_data
+          field: description__value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: taxonomy_term
+          entity_field: description
+          plugin_id: field
       filters:
         vid:
           id: vid
@@ -339,14 +403,15 @@ display:
           plugin_id: standard
       arguments: {  }
       display_extenders: {  }
-      css_class: mt-3
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
   block_1:
     display_plugin: block
     id: block_1
@@ -363,4 +428,5 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
