--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "drupal/eva": "^1.3",
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
+        "drupal/fontawesome": "^2.3",
         "drupal/group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
