--- a/web/sites/default/config/core.entity_form_display.taxonomy_term.community_actions.default.yml
+++ b/web/sites/default/config/core.entity_form_display.taxonomy_term.community_actions.default.yml
@@ -1,4 +1,4 @@
-uuid: 555019d3-ab60-4a4f-acb5-8ffebf961913
+uuid: baca9ec2-05a3-45eb-b229-c9f45c935b6f
 langcode: en
 status: true
 dependencies:
@@ -6,32 +6,41 @@ dependencies:
     - field.field.taxonomy_term.community_actions.field_fontawesome_icon
     - taxonomy.vocabulary.community_actions
   module:
-    - panelizer
+    - path
     - text
-third_party_settings:
-  panelizer:
-    enable: false
-    custom: false
-    allow: false
-    default: default
 id: taxonomy_term.community_actions.default
 targetEntityType: taxonomy_term
 bundle: community_actions
 mode: default
 content:
   description:
-    label: hidden
-    type: text_default
-    weight: 0
+    type: text_textarea
+    weight: 2
     region: content
-    settings: {  }
+    settings:
+      placeholder: ''
+      rows: 5
     third_party_settings: {  }
   field_fontawesome_icon:
     weight: 1
-    label: above
     settings:
-      link_to_entity: false
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: string
+    type: string_textfield
     region: content
+  name:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  path:
+    type: path
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
