--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -133,3 +133,7 @@ automated_cron: 0.0.0
 allowed_formats: 1.1.0
 time_field: 1.1.0
 conditional_fields: 1.0.0-alpha4
+fontawesome: 0.0.0
+ds: 0.0.0
+ds_extras: 0.0.0
+field_group: 0.0.0
