--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.taxonomy_term.field_fontawesome_icon
     - taxonomy.vocabulary.community_actions
   module:
     - taxonomy
@@ -53,14 +54,11 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: html_list
+        type: default
         options:
           grouping: {  }
-          row_class: list-group-item
+          row_class: ''
           default_row_class: false
-          type: ul
-          wrapper_class: ''
-          class: list-group
       row:
         type: fields
         options:
@@ -122,6 +120,69 @@ display:
           absolute: false
           entity_type: taxonomy_term
           plugin_id: entity_link
+        field_fontawesome_icon:
+          id: field_fontawesome_icon
+          table: taxonomy_term__field_fontawesome_icon
+          field: field_fontawesome_icon
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: ' fas fa-{{ field_fontawesome_icon }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         name:
           id: name
           table: taxonomy_term_field_data
@@ -133,7 +194,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}">{{ name }}</a>'
+            text: '<span class="community-action"><a href="{{ view_taxonomy_term }}" class="list-group-item list-group-item-action{{ field_fontawesome_icon }}">{{ name }}</a></span>'
             make_link: false
             path: ''
             absolute: false
@@ -220,14 +281,15 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      css_class: ''
+      css_class: 'mb-4 list-group'
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
   block_1:
     display_plugin: block
     id: block_1
@@ -244,4 +306,5 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
