--- a/web/sites/default/config/openid_connect.settings.azure.yml
+++ b/web/sites/default/config/openid_connect.settings.azure.yml
@@ -5,6 +5,6 @@ settings:
   client_secret: null
   authorization_endpoint: 'https://login.microsoftonline.com/common/oauth2/authorize'
   token_endpoint: 'https://login.microsoftonline.com/common/oauth2/token'
-  userinfo_endpoint: 'https://login.microsoftonline.com/common/oauth2/UserInfo'
+  userinfo_endpoint: 'https://graph.windows.net/me?api-version=1.6'
 _core:
   default_config_hash: VK_9Dn64pz1hqU6O-XiH5JDEkS-FfMRZR4dibpqIChg
