--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
@@ -22,16 +22,9 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_fontawesome_icon:
-    weight: 2
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_fontawesome_icon: true
