POWR-279 Add secrets plugin to lando

--- a/.lando.yml
+++ b/.lando.yml
@@ -8,6 +8,9 @@ framework: drupal8
 xdebug: true
 services:
   appserver:
+    build:
+      - mkdir -p ~/.terminus/plugins
+      - composer create-project -d ~/.terminus/plugins pantheon-systems/terminus-secrets-plugin:~1
     xdebug: true
     config:
       conf: xdebug.ini
