POWR-289 small changes to homepage sizing and layout

--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -4,11 +4,15 @@ cloudy_homepage:
   category: 'Cloudy'
   template: templates/layout/cloudy-homepage
   regions:
-    left:
-      label: 'Left'
+    actions:
+      label: 'Actions'
       classes:
-        - col-sm-4
-    right:
-      label: 'Right'
+        - actions
+    audiences:
+      label: 'Audiences'
       classes:
-        - col-sm-8
+        - audiences
+    topics:
+      label: 'Topics'
+      classes:
+        - topics
