POWR-262 Add media type Document. Remove Instagram and Tweet.

--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -5,6 +5,12 @@
 # https://api.drupal.org/api/drupal/core%21lib%21Drupal%21Core%21Menu%21menu.api.php/group/menu/8.2.x
 # https://www.drupal.org/docs/8/api/menu-api/providing-module-defined-local-tasks
 
+
+portland.group_media:
+  title: 'Media'
+  base_route: 'entity.group.canonical'
+  route_name: 'view.group_media.page_1'
+  weight: 150
 portland.add_content:
   title: '+ Add Content'
   base_route: 'entity.group.canonical'
