--- a/web/sites/default/config/field.storage.paragraph.field_media_summary.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_media_summary.yml
@@ -1,16 +1,16 @@
-uuid: 085b4018-607d-4f91-9b8f-fa1ff70780ea
+uuid: 76820dab-d36d-4fbc-9328-7cf462caa176
 langcode: en
 status: true
 dependencies:
   module:
-    - media
-_core:
-  default_config_hash: 9OZ-wAxZf8KE-bWw0LStM63AXv5rsrH3Ek8qO000DXA
-id: media.embed_code
-field_name: embed_code
-entity_type: media
-type: string_long
+    - paragraphs
+id: paragraph.field_media_summary
+field_name: field_media_summary
+entity_type: paragraph
+type: string
 settings:
+  max_length: 300
+  is_ascii: false
   case_sensitive: false
 module: core
 locked: false
