--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -3,6 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - media.type.document
+    - media.type.image
+    - media.type.video
     - node.type.alert
     - node.type.building
     - node.type.city_service
@@ -69,6 +72,10 @@ type_settings:
         - draft
         - published
   entity_types:
+    media:
+      - document
+      - image
+      - video
     node:
       - alert
       - building
