--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_body
     - node.type.guide
     - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
@@ -41,6 +42,7 @@ settings:
       telephone_button: telephone_button
       fax_button: fax_button
       location: location
+      document: document
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -69,4 +71,7 @@ settings:
       service_step:
         weight: -11
         enabled: false
+      document:
+        enabled: true
+        weight: 12
 field_type: entity_reference_revisions
