--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.paragraph.field_column
     - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
   module:
@@ -29,6 +30,7 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
+      document: document
       location: location
       simple_text: simple_text
     target_bundles_drag_drop:
@@ -38,6 +40,9 @@ settings:
       email_button:
         weight: 11
         enabled: false
+      document:
+        enabled: true
+        weight: 12
       fax_button:
         weight: 12
         enabled: false
