POWR-289 Fix config conflict

--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
@@ -26,4 +26,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_fontawesome_icon: true
