--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -22,8 +22,8 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: topics
-      weight: -1
+      region: right
+      weight: -9
       uuid: a9d59952-4724-44eb-be56-8b0f734491d0
       context_mapping: {  }
     3f4fbacb-424f-48cb-98af-75ab6261924b:
@@ -33,8 +33,8 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: actions
-      weight: -10
+      region: left
+      weight: -1
       uuid: 3f4fbacb-424f-48cb-98af-75ab6261924b
       context_mapping: {  }
     44c44eb6-b9ae-492c-9e8b-b5b91970f6b8:
@@ -44,8 +44,8 @@ variant_settings:
       label_display: '0'
       views_label: ''
       items_per_page: none
-      region: audiences
-      weight: -1
+      region: left
+      weight: 0
       uuid: 44c44eb6-b9ae-492c-9e8b-b5b91970f6b8
       context_mapping: {  }
   id: panels_variant
