--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "drupal/time_field": "^1.1",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
+        "drupal/viewsreference": "^1.2",
         "drush/drush": "9.3.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
