POWR-279 Add secrets reader service

--- a/web/modules/custom/portland/portland.services.yml
+++ b/web/modules/custom/portland/portland.services.yml
@@ -4,3 +4,7 @@ services:
     arguments: ['@logger.factory']
     tags:
       - { name: event_subscriber }
+
+  portland.secrets_reader:
+    class: Drupal\portland\SecretsReader
+    arguments: ['@logger.factory']
