POWR-279 Set session lifetime to one day

--- a/web/sites/default/services.yml
+++ b/web/sites/default/services.yml
@@ -16,13 +16,13 @@ parameters:
     # collector. When a session is deleted, authenticated users are logged out,
     # and the contents of the user's $_SESSION variable is discarded.
     # @default 200000
-    gc_maxlifetime: 200000
+    gc_maxlifetime: 86400
     #
     # Set session cookie lifetime (in seconds), i.e. the time from the session
     # is created to the cookie expires, i.e. when the browser is expected to
     # discard the cookie. The value 0 means "until the browser is closed".
     # @default 2000000
-    cookie_lifetime: 2000000
+    cookie_lifetime: 86400
     #
     # Drupal automatically generates a unique session cookie name based on the
     # full domain name used to access the site. This mechanism is sufficient
