POWR-262 Media path update. Add media tab. Group media view. Paragraphs.

--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -16,4 +16,9 @@ portland.add_content:
   base_route: 'entity.group.canonical'
   route_name: 'entity.group_content.group_node_add_page'
   weight: 160
+portland.add_media:
+  title: '+ Add Media'
+  base_route: 'entity.group.canonical'
+  route_name: 'entity.group_content.group_media_add_page'
+  weight: 170
 
