--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -10,9 +10,11 @@ dependencies:
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -43,6 +45,8 @@ settings:
       fax_button: fax_button
       location: location
       document: document
+      image: image
+      video: video
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -74,4 +78,10 @@ settings:
       document:
         enabled: true
         weight: 12
+      image:
+        enabled: true
+        weight: 18
+      video:
+        enabled: true
+        weight: 24
 field_type: entity_reference_revisions
