--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -6,8 +6,10 @@ dependencies:
     - field.storage.paragraph.field_column
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -33,6 +35,8 @@ settings:
       document: document
       location: location
       simple_text: simple_text
+      image: image
+      video: video
     target_bundles_drag_drop:
       columns_equal:
         weight: 10
@@ -61,7 +65,13 @@ settings:
       simple_text:
         enabled: true
         weight: 17
+      image:
+        enabled: true
+        weight: 18
       telephone_button:
         weight: 18
         enabled: false
+      video:
+        enabled: true
+        weight: 24
 field_type: entity_reference_revisions
