--- a/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.image.default.yml
@@ -1,22 +1,22 @@
-uuid: 7e6c0d34-edb6-4bf8-9743-4fea174f155b
+uuid: 3dc70e51-5270-4f1a-ab18-655455391629
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.document.field_document
-    - field.field.paragraph.document.field_media_summary
-    - paragraphs.paragraphs_type.document
-id: paragraph.document.default
+    - field.field.paragraph.image.field_image
+    - field.field.paragraph.image.field_media_summary
+    - paragraphs.paragraphs_type.image
+id: paragraph.image.default
 targetEntityType: paragraph
-bundle: document
+bundle: image
 mode: default
 content:
-  field_document:
+  field_image:
     type: entity_reference_entity_view
     weight: 1
     label: hidden
     settings:
-      view_mode: embedded
+      view_mode: default
       link: false
     third_party_settings: {  }
     region: content
