POWR-262 Update media types.

--- a/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
@@ -5,12 +5,10 @@ dependencies:
   config:
     - entity_browser.browser.document_browser
     - field.field.paragraph.document.field_document
-    - field.field.paragraph.document.field_media_summary
     - paragraphs.paragraphs_type.document
   module:
     - content_moderation
     - entity_browser
-    - maxlength
 id: paragraph.document.default
 targetEntityType: paragraph
 bundle: document
@@ -21,26 +19,13 @@ content:
     settings:
       entity_browser: document_browser
       field_widget_display: label
-      field_widget_edit: true
-      field_widget_remove: true
+      open: true
       selection_mode: selection_append
-      open: false
+      field_widget_edit: false
+      field_widget_remove: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
-    region: content
-  field_media_summary:
-    weight: 0
-    settings:
-      rows: 2
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 300
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-        maxlength_js_enforce: true
-        maxlength_js_truncate_html: true
-    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
