--- a/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
@@ -3,41 +3,34 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.video.field_media_summary
+    - entity_browser.browser.video_browser
     - field.field.paragraph.video.field_video
     - paragraphs.paragraphs_type.video
   module:
     - content_moderation
+    - entity_browser
 id: paragraph.video.default
 targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_media_summary:
-    weight: 101
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_video:
     type: entity_browser_entity_reference
-    weight: 102
+    weight: 0
     settings:
-      entity_browser: media_browser
+      entity_browser: video_browser
       field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
+      field_widget_edit: false
+      field_widget_remove: false
     region: content
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 1
     settings: {  }
     region: content
     third_party_settings: {  }
