--- a/web/sites/default/config/entity_browser.browser.image_table_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.image_table_browser.yml
@@ -1,4 +1,4 @@
-uuid: 5c8d400a-6a5c-4782-bfb6-30882656f316
+uuid: 9b983608-63c3-49c3-8879-b96c61787b1f
 langcode: en
 status: true
 dependencies:
@@ -6,26 +6,26 @@ dependencies:
     - views.view.media
   module:
     - views
-name: document_browser
-label: 'Document browser'
+name: image_table_browser
+label: 'Image table browser'
 display: modal
 display_configuration:
   width: '800'
   height: '600'
-  link_text: 'Select document'
+  link_text: 'Select image'
   auto_open: false
 selection_display: no_display
 selection_display_configuration: {  }
 widget_selector: single
 widget_selector_configuration: {  }
 widgets:
-  5549c658-a76c-43aa-9901-b60886e67661:
+  d635d0a5-9370-439f-bb43-1eeb5b2c5afe:
     settings:
       view: media
-      view_display: document_browser
-      submit_text: 'Select document'
+      view_display: image_table_browser
+      submit_text: 'Select image'
       auto_select: false
-    uuid: 5549c658-a76c-43aa-9901-b60886e67661
+    uuid: d635d0a5-9370-439f-bb43-1eeb5b2c5afe
     weight: 1
-    label: 'View documents'
+    label: view
     id: view
