--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -9,8 +9,7 @@ dependencies:
     - media.type.image
   module:
     - content_moderation
-    - image_widget_crop
-    - path
+    - image
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
 id: media.image.default
@@ -18,54 +17,31 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
-  field_media_in_library:
-    type: boolean_checkbox
-    weight: 4
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    region: content
   image:
-    type: image_widget_crop
-    weight: 0
+    type: image_image
+    weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
-      crop_list:
-        - freeform
-      show_crop_area: true
-      crop_preview_image_style: crop_thumbnail
-      show_default_crop: true
-      warn_multiple_usages: false
     third_party_settings: {  }
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 2
     settings: {  }
     region: content
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: 3
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 100
-    region: content
-    third_party_settings: {  }
 hidden:
   created: true
+  field_media_in_library: true
+  path: true
+  status: true
   uid: true
