--- a/web/sites/default/config/core.entity_form_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.video.default.yml
@@ -8,7 +8,7 @@ dependencies:
     - media.type.video
   module:
     - content_moderation
-    - path
+    - maxlength
     - video_embed_field
 _core:
   default_config_hash: OUea_b_jf81XjPvIY9J8KrRUckqz2APuLv4bkxYfdT4
@@ -17,13 +17,6 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
-  field_media_in_library:
-    type: boolean_checkbox
-    weight: 1
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    region: content
   field_media_video_embed_field:
     type: video_embed_field_textfield
     weight: 1
@@ -32,7 +25,7 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 3
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -42,24 +35,19 @@ content:
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 60
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
     region: content
-  path:
-    type: path
-    weight: 30
+  preview:
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  preview:
-    weight: 0
-    region: content
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 100
-    region: content
-    third_party_settings: {  }
 hidden:
   created: true
+  field_media_in_library: true
+  path: true
+  status: true
   uid: true
