--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -3,11 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_table_browser
     - field.field.paragraph.image.field_image
-    - field.field.paragraph.image.field_media_summary
     - paragraphs.paragraphs_type.image
   module:
     - content_moderation
+    - entity_browser
 id: paragraph.image.default
 targetEntityType: paragraph
 bundle: image
@@ -15,29 +16,21 @@ mode: default
 content:
   field_image:
     type: entity_browser_entity_reference
-    weight: 102
+    weight: 0
     settings:
-      entity_browser: media_browser
+      entity_browser: image_table_browser
       field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
+      field_widget_edit: false
+      field_widget_remove: false
     region: content
     third_party_settings: {  }
-  field_media_summary:
-    weight: 101
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 1
     settings: {  }
     region: content
     third_party_settings: {  }
