--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -17,16 +17,24 @@ mode: default
 content:
   image:
     type: image
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     region: content
+  name:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   created: true
   field_media_in_library: true
-  name: true
   thumbnail: true
   uid: true
