--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
-    - user
     - video_embed_field
 _core:
   default_config_hash: ULSDSeb1LGUAS40ia_8qngabv0GTcJAaHGl67xDUNsA
@@ -16,19 +15,9 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
-  created:
-    label: hidden
-    type: timestamp
-    weight: 1
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
-    region: content
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 3
+    weight: 1
     label: hidden
     settings:
       responsive: true
@@ -45,13 +34,9 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     region: content
-  uid:
-    label: hidden
-    type: author
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    region: content
 hidden:
+  content_moderation_control: true
+  created: true
   field_media_in_library: true
   thumbnail: true
+  uid: true
