--- a/web/sites/default/config/entity_browser.browser.video_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.video_browser.yml
@@ -1,4 +1,4 @@
-uuid: 5c8d400a-6a5c-4782-bfb6-30882656f316
+uuid: 7d0890c1-21ca-41a9-a60f-17ea202d0a21
 langcode: en
 status: true
 dependencies:
@@ -6,26 +6,26 @@ dependencies:
     - views.view.media
   module:
     - views
-name: document_browser
-label: 'Document browser'
+name: video_browser
+label: 'Video browser'
 display: modal
 display_configuration:
   width: '800'
   height: '600'
-  link_text: 'Select document'
+  link_text: 'Select video'
   auto_open: false
 selection_display: no_display
 selection_display_configuration: {  }
 widget_selector: single
 widget_selector_configuration: {  }
 widgets:
-  5549c658-a76c-43aa-9901-b60886e67661:
+  5a397660-ac57-4a68-b5cc-6ac64e7bfffd:
     settings:
       view: media
-      view_display: document_browser
-      submit_text: 'Select document'
+      view_display: video_browser
+      submit_text: 'Select video'
       auto_select: false
-    uuid: 5549c658-a76c-43aa-9901-b60886e67661
+    uuid: 5a397660-ac57-4a68-b5cc-6ac64e7bfffd
     weight: 1
-    label: 'View documents'
+    label: View
     id: view
