POWR-294 add cim and cr to deploys on Pantheon.

--- a/pantheon.yml
+++ b/pantheon.yml
@@ -26,6 +26,9 @@ workflows:
   deploy:
     after:
       - type: webphp
+        description: Import configuration from .yml files
+        script: private/scripts/drush_config_import.php
+      - type: webphp
         description: Post deployment notification to Slack
         script: private/scripts/slack_deploy_notification.php
   sync_code:
