POWR-295 turn on performance settings for test and production, add settings.local.php to repo.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@ web/vendor/
 pantheon.upstream.yml
 
 # Pantheon commits a settings.php for environment-specific settings.
-# Place local settings in settings.local.php
-web/sites/*/settings.local.php
+# Place local settings in settings.local.php.
+# We included this in our repo as it has no secrets.
+# web/sites/*/settings.local.php
 
 # Note that services.local.yml is not loaded by default. If you would like
 # to use this file add the following to your settings.local.php file:
