--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "^1.4"
+        "wikimedia/composer-merge-plugin": "^1.4",
+        "drupal/admin_toolbar": "^1.18"
     },
     "require-dev": {
         "behat/behat": "^3.4",
@@ -82,7 +83,6 @@
         "behat/mink-goutte-driver": "~1.2",
         "behat/mink-selenium2-driver": "^1.3",
         "bex/behat-screenshot": "^1.2",
-        "drupal/admin_toolbar": "^1.18",
         "drupal/coder": "^8.2",
         "drupal/devel": "^1.2",
         "drupal/drupal-extension": "^3.4",
