POWR-296 corrects bug in Drupal core that causes a dependency error. D.o #2986725

--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,8 @@
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4",
-        "drupal/admin_toolbar": "^1.18"
+        "drupal/admin_toolbar": "^1.18",
+        "doctrine/common":"2.8"
     },
     "require-dev": {
         "behat/behat": "^3.4",
