POWR-296 made it a conflict instead of a require

--- a/composer.json
+++ b/composer.json
@@ -74,8 +74,7 @@
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4",
-        "drupal/admin_toolbar": "^1.18",
-        "doctrine/common":"2.8"
+        "drupal/admin_toolbar": "^1.18"
     },
     "require-dev": {
         "behat/behat": "^3.4",
@@ -97,7 +96,8 @@
         "symfony/css-selector": "~2.8|~3.0"
     },
     "conflict": {
-        "drupal/drupal": "*"
+        "drupal/drupal": "*",
+        "doctrine/common":">2.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
