POWR-DEMO Change the site name

--- a/web/sites/default/config/system.site.yml
+++ b/web/sites/default/config/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 191eddb9-0929-4dbd-bbfa-3f97bf1d93e0
-name: 'Portland Oregon'
+name: 'The City of Portland Oregon'
 mail: joshua.mitchell@portlandoregon.gov
 slogan: ''
 page:
