POWR-93 Add Media types: document, image, video.

--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -6,12 +6,15 @@ dependencies:
     - field.storage.node.field_body
     - node.type.guide
     - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -41,6 +44,9 @@ settings:
       telephone_button: telephone_button
       fax_button: fax_button
       location: location
+      document: document
+      image: image
+      video: video
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -69,4 +75,13 @@ settings:
       service_step:
         weight: -11
         enabled: false
+      document:
+        enabled: true
+        weight: 12
+      image:
+        enabled: true
+        weight: 18
+      video:
+        enabled: true
+        weight: 24
 field_type: entity_reference_revisions
