--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -5,8 +5,11 @@ dependencies:
   config:
     - field.storage.paragraph.field_column
     - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -29,8 +32,11 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
+      document: document
       location: location
       simple_text: simple_text
+      image: image
+      video: video
     target_bundles_drag_drop:
       columns_equal:
         weight: 10
@@ -38,6 +44,9 @@ settings:
       email_button:
         weight: 11
         enabled: false
+      document:
+        enabled: true
+        weight: 12
       fax_button:
         weight: 12
         enabled: false
@@ -56,7 +65,13 @@ settings:
       simple_text:
         enabled: true
         weight: 17
+      image:
+        enabled: true
+        weight: 18
       telephone_button:
         weight: 18
         enabled: false
+      video:
+        enabled: true
+        weight: 24
 field_type: entity_reference_revisions
