--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -11,8 +11,14 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access contextual links'
+  - 'access document_browser entity browser pages'
+  - 'access image_browser entity browser pages'
+  - 'access image_table_browser entity browser pages'
+  - 'access media overview'
+  - 'access media_browser entity browser pages'
   - 'access shortcuts'
   - 'access toolbar'
+  - 'access video_browser entity browser pages'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
