--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -5,9 +5,20 @@
 # https://api.drupal.org/api/drupal/core%21lib%21Drupal%21Core%21Menu%21menu.api.php/group/menu/8.2.x
 # https://www.drupal.org/docs/8/api/menu-api/providing-module-defined-local-tasks
 
+
+portland.group_media:
+  title: 'Media'
+  base_route: 'entity.group.canonical'
+  route_name: 'view.group_media.page_1'
+  weight: 150
 portland.add_content:
   title: '+ Add Content'
   base_route: 'entity.group.canonical'
   route_name: 'entity.group_content.group_node_add_page'
   weight: 160
+portland.add_media:
+  title: '+ Add Media'
+  base_route: 'entity.group.canonical'
+  route_name: 'entity.group_content.group_media_add_page'
+  weight: 170
 
