--- a/web/sites/default/config/group.role.bureau_office-anonymous.yml
+++ b/web/sites/default/config/group.role.bureau_office-anonymous.yml
@@ -12,9 +12,12 @@ audience: anonymous
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  0: 'view group'
-  1: 'view group_node:city_service entity'
-  2: 'view group_node:news entity'
-  3: 'view group_node:guide entity'
-  4: 'view group_node:information entity'
-  6: 'view group_node:event entity'
+  - 'view group'
+  - 'view group_node:city_service entity'
+  - 'view group_node:news entity'
+  - 'view group_node:guide entity'
+  - 'view group_node:information entity'
+  - 'view group_node:event entity'
+  - 'view group_media:document entity'
+  - 'view group_media:image entity'
+  - 'view group_media:video entity'
