POWR-93 Add document name in embedded display.

--- a/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.embedded.yml
@@ -17,15 +17,24 @@ bundle: document
 mode: embedded
 content:
   field_document:
-    weight: 0
+    weight: 1
     label: hidden
-    settings: {  }
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
     region: content
+  name:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   created: true
   field_media_in_library: true
-  name: true
   thumbnail: true
   uid: true
