--- a/web/sites/default/config/views.view.my_media.yml
+++ b/web/sites/default/config/views.view.my_media.yml
@@ -461,7 +461,7 @@ display:
           entity_field: created
           plugin_id: field
         changed_1:
-          id: changed
+          id: changed_1
           table: media_field_data
           field: changed
           relationship: none
