--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -28,7 +28,7 @@ content:
     region: content
   field_document:
     weight: 1
-    label: above
+    label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
