POWR-93 Update custom media browser column names and sorting order.

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -872,6 +872,10 @@ display:
           columns:
             entity_browser_select: entity_browser_select
             name: name
+            field_document: field_document
+            label: label
+            created: created
+            changed: changed
           info:
             entity_browser_select:
               align: ''
@@ -879,13 +883,39 @@ display:
               empty_column: false
               responsive: ''
             name:
-              sortable: false
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-          default: '-1'
+            field_document:
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            label:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            created:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            changed:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: changed
           empty_table: false
       defaults:
         style: false
@@ -1152,7 +1182,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Authored on'
+          label: Created
           exclude: false
           alter:
             alter_text: false
@@ -1219,7 +1249,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Changed
+          label: Updated
           exclude: false
           alter:
             alter_text: false
@@ -2400,6 +2430,10 @@ display:
           columns:
             entity_browser_select: entity_browser_select
             name: name
+            thumbnail__target_id: thumbnail__target_id
+            label: label
+            created: created
+            changed: changed
           info:
             entity_browser_select:
               align: ''
@@ -2407,13 +2441,41 @@ display:
               empty_column: false
               responsive: ''
             name:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            thumbnail__target_id:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-          default: '-1'
+            label:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            created:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            changed:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: changed
           empty_table: false
       defaults:
         style: false
@@ -2683,7 +2745,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Authored on'
+          label: Created
           exclude: false
           alter:
             alter_text: false
@@ -2750,7 +2812,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Changed
+          label: Updated
           exclude: false
           alter:
             alter_text: false
@@ -3145,6 +3207,10 @@ display:
           columns:
             entity_browser_select: entity_browser_select
             name: name
+            thumbnail__target_id: thumbnail__target_id
+            label: label
+            created: created
+            changed: changed
           info:
             entity_browser_select:
               align: ''
@@ -3152,13 +3218,41 @@ display:
               empty_column: false
               responsive: ''
             name:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            thumbnail__target_id:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-          default: '-1'
+            label:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            created:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            changed:
+              sortable: true
+              default_sort_order: desc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: changed
           empty_table: false
       defaults:
         style: false
@@ -3428,7 +3522,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Authored on'
+          label: Created
           exclude: false
           alter:
             alter_text: false
@@ -3495,7 +3589,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Changed
+          label: Updated
           exclude: false
           alter:
             alter_text: false
