POWR-259 Created Alerts views page with class to always show regardless of whether alerts have been dismissed; updated blocks so that Alerts block isn't displayed on Alerts page; required and enabled menu_markup menu and configured to display Alerts link with alert count.

--- a/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__alerts_block_1.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.alerts
   module:
+    - system
     - views
   theme:
     - cloudy
@@ -21,4 +22,9 @@ settings:
   label_display: '0'
   views_label: ''
   items_per_page: none
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: /alerts
+    negate: true
+    context_mapping: {  }
