--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -558,3 +558,25 @@ display:
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
+    position: 1
+    display_options:
+      display_extenders: {  }
+      path: alerts
+      css_class: always-show
+      defaults:
+        css_class: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_severity'
+        - 'config:field.storage.node.field_summary'
+        - 'config:workflow_list'
