--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -261,6 +261,7 @@ display:
         type: normal
         title: 'Bureaus and offices'
         menu_name: main
+        weight: -49
       cache:
         type: none
       defaults:
