--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal-pattern-lab/bem-twig-extension": "^1.0",
         "drupal-pattern-lab/unified-twig-extensions": "^0.1",
         "drupal/address": "^1.3",
+        "drupal/admin_toolbar": "^1.18",
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
         "drupal/allowed_formats": "^1.1",
@@ -54,6 +55,7 @@
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
         "drupal/maxlength": "^1.0",
+        "drupal/menu_markup": "^1.0",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
@@ -73,8 +75,7 @@
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "^1.4",
-        "drupal/admin_toolbar": "^1.18"
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
         "behat/behat": "^3.4",
