--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -80,6 +80,7 @@ module:
   media: 0
   media_entity_instagram: 0
   media_entity_twitter: 0
+  menu_markup: 0
   menu_ui: 0
   metatag: 0
   node: 0
